# System_Integration_I

01._Assignments/01a._Data_Parsing_Servers/csharp/: Program.cs  csharp.cs  csharp.csproj  csharp.sln
01._Assignments/01a._Data_Parsing_Servers/data2/: ppl.csv
01._Assignments/01a._Data_Parsing_Servers/python/: python.py
02._Assignments/: 02._Assignments.sln
02._Assignments/.mypy_cache/3.10/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _csv.data.json  _csv.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _sitebuiltins.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  csv.data.json  csv.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  pathlib.data.json  pathlib.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  (+17 more)
02._Assignments/.mypy_cache/3.12/: _ast.data.json  (+187 more)
02._Assignments/python/: DataController.py  DataParser.py
03._Assignments/server_1/: app.py  pyproject.toml
03._Assignments/server_1/data/: data.csv  data.json  data.txt  data.yaml
03._Assignments/server_2/: index.js  package-lock.json  package.json
04._Assignments/: app.py  pyproject.toml
06_.Assignments/: app.py  pyproject.toml
(+628 files in other folders)
