[project]
name = "06-assignments"
version = "0.1.0"
description = ""
authors = [
    {name = "DizzyMoon",email = "mikkel.simons@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websocket (>=0.2.1,<0.3.0)",
    "websockets (>=15.0.1,<16.0.0)"
]

[tool.poetry]
packages = [{include = "06_", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
